Updated upload profile pic function
